Change table alias in query 3
Change a for airline to better readablity

--- a/notebook/pyspark_data_exploration_etl_development.ipynb
+++ b/notebook/pyspark_data_exploration_etl_development.ipynb
@@ -18,12 +18,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "684868d4-ff81-448b-a237-cd552bfc3d65",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - hive</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://gdpic-srvls-session-b7e598f5-1948-4628-981d-261519df0647-m.us-central1-c.c.velascoluis-dev-sandbox.internal:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.4.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>spark://gdpic-srvls-session-b7e598f5-1948-4628-981d-261519df0647-m:7077</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>PySparkShell</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x7fa9808a1b50>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spark"
    ]
@@ -40,12 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d2860145-6dda-4a9f-8719-fdc87375faf9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------------------+\n",
+      "|        airport_name|average_departure_delay|\n",
+      "+--------------------+-----------------------+\n",
+      "|Los Angeles Inter...|                   30.0|\n",
+      "|    Heathrow Airport|                   15.0|\n",
+      "|John F. Kennedy I...|                    0.0|\n",
+      "+--------------------+-----------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql.functions import avg, col, desc\n",
     "\n",
@@ -76,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3bf35a0f-640b-4cc7-96a8-5755ace02858",
    "metadata": {
     "tags": []
@@ -90,12 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "68100a6d-4415-4510-920d-e15fee54757a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr style=\"border-bottom: 1px solid\"><td style=\"font-weight: bold\">airport_name</td><td style=\"font-weight: bold\">average_departure_delay</td></tr><tr><td>Los Angeles International Airport</td><td>30.0</td></tr><tr><td>Heathrow Airport</td><td>15.0</td></tr><tr><td>John F. Kennedy International Airport</td><td>0.0</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sparksql\n",
     "SELECT\n",
