--- a/notebook/sql_data_exploration_etl_development.ipynb
+++ b/notebook/sql_data_exploration_etl_development.ipynb
@@ -70,12 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d043508f-4134-4bef-b62d-2584a1fef463",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            airport_name  average_departure_delay\n",
+      "0      Los Angeles International Airport                     30.0\n",
+      "1                       Heathrow Airport                     15.0\n",
+      "2  John F. Kennedy International Airport                      0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from google.cloud import bigquery\n",
     "import pandas as pd\n",
@@ -122,12 +133,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f282dd9b-2de4-445a-918e-5676b62d4025",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Query job e55f0e0e-a993-4847-8890-ec0f3e2e0e17 is DONE. 222 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:e55f0e0e-a993-4847-8890-ec0f3e2e0e17&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Query job 922de6b1-5a41-40c3-8d63-2701baa34bd6 is DONE. 213 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:922de6b1-5a41-40c3-8d63-2701baa34bd6&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Query job 53f5b603-4995-4ac0-a39d-eb40e2c7cd25 is DONE. 525 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:53f5b603-4995-4ac0-a39d-eb40e2c7cd25&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Query job 3f1b1e28-a0c2-44ae-adfe-402010c6d590 is DONE. 271 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:3f1b1e28-a0c2-44ae-adfe-402010c6d590&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Query job 8c337e0b-dd38-4268-8b42-bd92adfc0bba is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:8c337e0b-dd38-4268-8b42-bd92adfc0bba&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Query job 771506bb-ec25-4b15-89f8-59a4734f70b6 is DONE. 188 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=velascoluis-dev-sandbox&j=bq:us-central1:771506bb-ec25-4b15-89f8-59a4734f70b6&page=queryresults\">Open Job</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            airport_name  average_departure_delay\n",
+      "2      Los Angeles International Airport                     30.0\n",
+      "0                       Heathrow Airport                     15.0\n",
+      "1  John F. Kennedy International Airport                      0.0\n",
+      "\n",
+      "[3 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import bigframes.pandas as bpd\n",
     "\n",
@@ -157,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c23d9abe-2771-436c-9d9d-3f1b859c23ab",
    "metadata": {
     "tags": []
@@ -203,12 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39f56cdc-c107-45e2-958d-85c2bdf73235",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<google.cloud.bigquery.table.RowIterator at 0x7f9c522b3f70>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.query_and_wait(query_step_1)\n",
     "client.query_and_wait(query_step_2)\n",
@@ -217,15 +324,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "36a218ff-45da-407f-adb7-8251ce644ce1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airport_name</th>\n",
+       "      <th>average_total_delay</th>\n",
+       "      <th>on_time_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John F. Kennedy International Airport</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Heathrow Airport</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Los Angeles International Airport</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            airport_name  average_total_delay  \\\n",
+       "0  John F. Kennedy International Airport                  0.0   \n",
+       "1                       Heathrow Airport                 30.0   \n",
+       "2      Los Angeles International Airport                 30.0   \n",
+       "\n",
+       "   on_time_percentage  \n",
+       "0                 1.0  \n",
+       "1                 0.0  \n",
+       "2                 0.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.query_and_wait(\"SELECT * FROM airline.etl_step_3_airport_performance_sql\").to_dataframe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a563516c-8aff-4091-ba77-96b83853bd1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
